# drim-rag-demo

./: .gitignore  README.md
app-1-ask-paul-graham/: .env.example  .gitignore  README.md  app.py  docker-compose.yml  download_data.py  pyproject.toml
app-2-python-docs-assistant/: .env.example  .gitignore  README.md  app.py  download_data.py  index.py  pyproject.toml  retrieval.py
app-3-k8s-knowledge-base/: .env.example  .gitignore  README.md  app.py  config.py  db.py  docker-compose.yml  evaluate.py  feedback.py  index.py  pipeline.py  pyproject.toml  router.py
app-3-k8s-knowledge-base/scripts/: download_api_specs.py  download_code.py  download_docs.py
docs/designs/: 2026-02-24-rag-practice-apps.md
docs/plans/: 2026-02-24-rag-practice-apps.md
docs/specs/: app-1-ask-paul-graham.md  app-2-python-docs-assistant.md  app-3-k8s-knowledge-base.md
